--- a/app.wxss
+++ b/app.wxss
@@ -37,9 +37,9 @@ input {
   font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
 }
 .container-background{
+  min-height:100%;
   width: 100%;
   height: 100%;
-  background-size:100% 100%;
   position:fixed;
   z-index: -2;
 }
