--- a/pages/route/route.wxml
+++ b/pages/route/route.wxml
@@ -7,5 +7,36 @@
   <template is="head" data="{{head: avatar, name: realName, isHome: isHome}}"/>
   <image class='container-background' src="../../resource/background.png" mode="widthFix"></image>
   <view class="page-body">
+    <view class="route-head-container">
+      <image class="route-head" src="../../resource/route-head.png" mode="widthFix"></image>
+    </view>
+    <view class="route-body">
+      <image class='route-background' src="../../resource/route-background.png" mode="widthFix"></image>
+      <view class="prize-container">
+        <view class="prize-line">
+          <image class='prize-content' src="{{logos[0]}}" mode="widthFix"></image>
+          <image class='prize-content' src="{{logos[1]}}" mode="widthFix"></image>
+          <image class='prize-content' src="{{logos[2]}}" mode="widthFix"></image>
+          <image class='prize-content' src="{{logos[3]}}" mode="widthFix"></image>
+        </view>
+        <view class="prize-line">
+          <image class='prize-content' src="{{logos[4]}}" mode="widthFix"></image>
+          <image class='prize-content' src="{{logos[5]}}" mode="widthFix"></image>
+          <image class='prize-content' src="{{logos[6]}}" mode="widthFix"></image>
+          <image class='prize-content' src="{{logos[7]}}" mode="widthFix"></image>
+        </view>
+        <view class="prize-line">
+          <image class='prize-content' src="{{logos[8]}}" mode="widthFix"></image>
+          <image class='prize-content' src="{{logos[9]}}" mode="widthFix"></image>
+          <image class='prize-content' src="{{logos[10]}}" mode="widthFix"></image>
+          <image class='prize-content' src="{{logos[11]}}" mode="widthFix"></image>
+        </view>
+        <view class="prize-line">
+          <image class='prize-content' src="{{logos[12]}}" mode="widthFix"></image>
+          <image class='prize-content' src="{{logos[13]}}" mode="widthFix"></image>
+          <image class='prize-content' src="{{logos[14]}}" mode="widthFix"></image>
+        </view>
+      </view>
+    </view>
   </view>
 </view>
