--- a/common/head.wxml
+++ b/common/head.wxml
@@ -2,7 +2,7 @@
   <view class="page-head">
     <image class='page-head-background' src="../../resource/head.png" mode="widthFix"></image>
     <view wx:if="{{isHome}}" class="page-head-userinfo">
-      <image class="page-head-avatar" src="{{head}}" mode="cover"></image>
+      <image class="page-head-avatar" src="{{head}}" bindtap="tapToLogout" mode="cover"></image>
       <text class='page-head-name'>{{name}}</text>
     </view>
     <block wx:else>
